# django-timetable

./: .editorconfig  .gitignore  LICENSE  README.md  pyproject.toml
project/: settings.py  urls.py
timetable/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
timetable/tests/: test_model_study_group.py
