[tool.poetry]
name = "university-timetable"
version = "0.1.0"
description = ""
authors = ["Vladimir Leveryev <volodya.leveryev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.2"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
flake8 = "^5.0.4"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
